# raylib_mandelbrot

./: CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
toolchain/: Windows.cmake
